# be-template-python-1

./: .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  container-launch.json  devcontainer.json  docker-compose.yaml
.github/workflows/: deploy.yaml  linter.yaml  tests.yaml
docker/: .dockerignore  Dockerfile
scripts/constants/: config.py
scripts/core/services/: __init__.py
tests/: conftest.py
