[project]
name = "example"
version = "0.1.0"
description = "Example Repo for template."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "granian>=1.7.5",
    "jetpack>=0.1.1",
    "orjson>=3.10.15",
    "pydantic<2.11",
    "pydantic-settings>=2.7.0",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "debugpy>=1.8.11",
]

[[tool.uv.index]]
# Optional name for the index.
name = "prismatica-pypi"
# Required URL for the index.
url = "https://readUser:hh(iBaf71$icV63@pypi.prismatica.in/simple"


[tool.pytest.ini_options]
pythonpath = ["scripts", "."]


[tool.coverage.report]
precision = 2
fail_under = 50
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/scripts/constants/*",
    "*/scripts/db/*",
    "app.py",
    "main.py",
]
